04/29/2020  - User count is now shown in top corner of room  - Max User input now prevents more then the specified number of users  from joining  - Usernames now appear above messages  - cleaned Chatroom css  - fixed issue where attempting to join using a room number followed by  whitespace would crash the server  - added website logo  - improved join error messages on join page  - improved randomness of room id creation

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,18 +3,14 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 5vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  padding-left: 30px;
 }
 
 .App-header {
-  display: block;
+  display: flex;
+  align-items: center;
   position: fixed;
   width: 100vw;
   padding-top: 10px;
@@ -25,7 +21,8 @@
 .App-title {
   color: white;
   text-align: left;
-  padding-left: 50px;
+  padding-left: 20px;
+  font-size: 2vmin;
 }
 
 .page-body {
@@ -39,6 +36,7 @@
   color: white;
 }
 
+/*Chatroom */
 .chatbox-body {
   width: 70vw;
   min-height: 70vh;
@@ -47,6 +45,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.chat-title-containter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .message-list-container {
@@ -67,13 +73,14 @@
   width: 100%;
 }
 
-.message {
+.messageBox {
   width: 100%;
   height: 30px;
   outline: none;
   resize: none;
   background-color: white;
   border: 3px solid #282c34;
+  font-size: 15px;
 }
 
 .text-form-container {
@@ -82,26 +89,44 @@
   margin: 20px;
 }
 
-.outgoingMessage {
-  background-color: purple;
-  max-width: 50%;
-  width: fit-content;
-  float: right;
-  padding: 10px 20px 10px 20px;
-  margin: 10px 20px 20px auto;
+.message {
   border-radius: 10px;
   word-wrap: break-word;
+  padding: 10px 20px 10px 20px;
+  margin: 10px 20px;
+}
+
+.outgoingMessage {
+  background-color: purple;
 }
 
 .incomingMessage {
   background-color: gray;
-  max-width: 50%;
+}
+
+.messageContainer {
+  display: flex;
+  flex-direction: column;
   width: fit-content;
-  float: left;
-  padding: 10px 20px 10px 20px;
-  margin: 10px 20px;
-  border-radius: 10px;
+}
+
+.outgoingContainer {
+  margin-left: auto;
+}
+
+.username {
+  font-size: 15px;
   word-wrap: break-word;
+  margin-bottom: 0px;
+  padding: 0px 20px;
+}
+
+.incomingUsername {
+  text-align: left;
+}
+
+.outgoingUsername {
+  text-align: right;
 }
 
 /*Button Component*/
@@ -204,4 +229,20 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+/*inputs*/
+input {
+  font-size: 20px;
+  margin: 20px;
+}
+
+.formErrors {
+  font-size: 20px;
+  color: rgb(245, 62, 62);
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
 }
